// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1u2bv2v-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-dqt3sg-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 16px);
  border-color: #b3144d;
}

.cache-dqt3sg-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-dqt3sg-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-dqt3sg-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-dqt3sg-StyledTextArea::placeholder {
  color: #727683;
}

.cache-dqt3sg-StyledTextArea:hover {
  border-color: #8c40ef;
}

.cache-dqt3sg-StyledTextArea:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

.cache-1cpaqth-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1fmk7r4-StyledRow {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-1u2bv2v-StyledText e13y3mga0"
          for=":rk:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="true"
        class="cache-dqt3sg-StyledTextArea enu776d0"
        id=":rk:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      >
        <svg
          class="cache-1cpaqth-sizeStyles e1gt4cfo0"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15H13V17H11V15ZM11 7H13V13H11V7ZM12 2C6.47 2 2 6.5 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C5.85752 19.9997 6.95991 20.7362 8.17317 21.2388C9.38642 21.7413 10.6868 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7362 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM12 20C9.87827 20 7.84344 19.1571 6.34315 17.6569C4.84285 16.1566 4 14.1217 4 12C4 9.87827 4.84285 7.84344 6.34315 6.34315C7.84344 4.84285 9.87827 4 12 4C14.1217 4 16.1566 4.84285 17.6569 6.34315C19.1571 7.84344 20 9.87827 20 12C20 14.1217 19.1571 16.1566 17.6569 17.6569C16.1566 19.1571 14.1217 20 12 20Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="cache-1fmk7r4-StyledRow e3f5lzv0"
    >
      <div>
        <p
          class="cache-vdlwt8-StyledText e13y3mga0"
        >
          success
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1u2bv2v-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-13uqr61-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 16px);
  border-color: #22674e;
}

.cache-13uqr61-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-13uqr61-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-13uqr61-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-13uqr61-StyledTextArea::placeholder {
  color: #727683;
}

.cache-13uqr61-StyledTextArea:hover {
  border-color: #8c40ef;
}

.cache-13uqr61-StyledTextArea:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

.cache-1gu5rzu-sizeStyles {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1fmk7r4-StyledRow {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-1u2bv2v-StyledText e13y3mga0"
          for=":rg:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="cache-13uqr61-StyledTextArea enu776d0"
        id=":rg:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      >
        <svg
          class="cache-1gu5rzu-sizeStyles e1gt4cfo0"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M11,16.5L6.5,12L7.91,10.59L11,13.67L16.59,8.09L18,9.5L11,16.5Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="cache-1fmk7r4-StyledRow e3f5lzv0"
    >
      <div>
        <p
          class="cache-1n7fwv3-StyledText e13y3mga0"
        >
          success
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1u2bv2v-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-18ftnl8-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
  cursor: not-allowed;
}

.cache-18ftnl8-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-18ftnl8-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-18ftnl8-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-18ftnl8-StyledTextArea::placeholder {
  color: #727683;
}

.cache-18ftnl8-StyledTextArea::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-18ftnl8-StyledTextArea::-moz-placeholder {
  color: #b5b7bd;
}

.cache-18ftnl8-StyledTextArea:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-18ftnl8-StyledTextArea::placeholder {
  color: #b5b7bd;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-1u2bv2v-StyledText e13y3mga0"
          for=":ra:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="cache-18ftnl8-StyledTextArea enu776d0"
        disabled=""
        id=":ra:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1u2bv2v-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1mgkvhk-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
  background: #f9f9fa;
  border-color: #e9eaeb;
}

.cache-1mgkvhk-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-1mgkvhk-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-1mgkvhk-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-1mgkvhk-StyledTextArea::placeholder {
  color: #727683;
}

.cache-1mgkvhk-StyledTextArea:hover {
  border-color: #8c40ef;
}

.cache-1mgkvhk-StyledTextArea:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-1u2bv2v-StyledText e13y3mga0"
          for=":rd:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="cache-1mgkvhk-StyledTextArea enu776d0"
        id=":rd:"
        readonly=""
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly with basic props 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1u2bv2v-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-gulgun-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
}

.cache-gulgun-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-gulgun-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-gulgun-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-gulgun-StyledTextArea::placeholder {
  color: #727683;
}

.cache-gulgun-StyledTextArea:hover {
  border-color: #8c40ef;
}

.cache-gulgun-StyledTextArea:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-1u2bv2v-StyledText e13y3mga0"
          for=":r0:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="cache-gulgun-StyledTextArea enu776d0"
        id=":r0:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;
